src/mermaid/ascii/mindmap/snapshots/veol__mermaid__ascii__mindmap__render__tests__render_ascii_charset.snap
---
source: src/mermaid/ascii/mindmap/render.rs
expression: render_ascii(src)
---
O m
|-- . A
|   `-- . B
`-- . C
