src/mermaid/ascii/mindmap/snapshots/veol__mermaid__ascii__mindmap__render__tests__render_circle_root.snap
---
source: src/mermaid/ascii/mindmap/render.rs
expression: render(src)
---
● mindmap
├── · A
└── · B
