src/mermaid/ascii/mindmap/snapshots/veol__mermaid__ascii__mindmap__render__tests__render_square_node.snap
---
source: src/mermaid/ascii/mindmap/render.rs
expression: render(src)
---
· root
├── ■ Square Node
└── · plain
